# local-favicon-generator

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  README.md  ROADMAP.md  SECURITY.md  favicon_gen.py  pyproject.toml
.github/workflows/: ci.yml
assets/img/logo/: test_logo_v1.af
tests/: test_favicon_gen.py
