[project]
name = "local-favicon-generator"
version = "1.0.1"
description = "A locally hosted tool to generate full favicon packages similar to RealFaviconGenerator.net."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
dependencies = [
    "Pillow>=10.0.0",
]

[project.scripts]
favicon-gen = "favicon_gen:main"

[build-system]
requires = ["setuptools>=61.0", "ruff>=0.1.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D100", "D104", "D105", "D107", "D203", "D213"] # Add incompatible rules here.

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D"]
"favicon_gen.py" = ["E501"]

[tool.setuptools.packages.find]
where = ["."]
include = ["favicon_gen.py"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "bandit>=1.7.0", "safety>=2.3.0", "pytest-cov>=4.0.0"]
